<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LocalizacionActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a1_posicion" />

    <TextView
        android:id="@+id/_latitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a1_latitud" />

    <TextView
        android:id="@+id/_longitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a1_longitud" />

    <TextView
        android:id="@+id/_precision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a1_precision" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a1_providerstatus" />

    <TextView
        android:id="@+id/_estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a1_estado" />

    <LinearLayout
        android:id="@+id/LinearLayoutBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/_comenzar"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a1_btnComenzar" />

        <Button
            android:id="@+id/_finalizar"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a1_btnFinalizar" />

    </LinearLayout>

</LinearLayout>